<resources>
    <string name="app_name">Homework2</string>
    <string name="AliMahmoud">Ali Mahmoud</string>
    <string name="location">Gaza, Palestine</string>
    <string name="balance">Balance</string>
    <string name="money">100.00</string>
    <string name="orders">Orders</string>
    <string name="ordersAmount">10</string>
    <string name="totalSpent">Total Spent</string>
    <string name="totalSpentAmount">50.0</string>
    <string name="personalInformation">Personal Information</string>
    <string name="yourOrder">Your Order</string>
    <string name="yourFavourites">Your Favourites</string>
    <string name="payment">Payment</string>
    <string name="recommendedShops">Recommended Shops</string>
    <string name="nearestShop">Nearest Shop</string>
    <string name="logout">Logout</string>
    <string name="relativeLayoutScreen">RelativeLayout Screen</string>
    <string name="constrainLayoutScreen">ConstrainLayout Screen</string>
</resources>